--- a/index.html
+++ b/index.html
@@ -2016,7 +2016,7 @@ function submitForm() {
 
   // メニューは1行1項目（⇒で表示）
   const selectedSymptomText = formData.selectedSymptom
-    ? formData.selectedSymptom.map(item => `⇒${item.name ?? item.label ?? item}`).join('\n')
+    ? formData.selectedSymptom.map(item => `・${item.name ?? item.label ?? item}`).join('\n')
     : '⇒メニュー未選択';
 
   // ★ irradiations を「・」で箇条書き＆改行
