--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,9 @@
       if(!date1){ alert('第1希望日時を選択してください。'); return; }
 
       const text =
-`【ネイル・まつ毛同時施術のご予約】
+`【予約フォーム】
+
+ネイル・まつ毛同時施術のご予約
 
 《お名前》${name}
 《お電話番号》${phone}
@@ -1521,9 +1523,9 @@ ${handOpts.length ? '・' + handOpts.join('\n・') : '・なし'}
 ・${footOpts.join('\n・')}
 
 【希望日時】
-《第1希望》${formatISOToJP(date1)}
-《第2希望》${formatISOToJP(date2) || '（未入力）'}
-《第3希望》${formatISOToJP(date3) || '（未入力）'}
+《第1希望》\n${formatISOToJP(date1)}
+《第2希望》\n${formatISOToJP(date2) || '（未入力）'}
+《第3希望》\n${formatISOToJP(date3) || '（未入力）'}
 
 《その他ご要望》
 ${message || '（なし）'}
