--- a/index.html
+++ b/index.html
@@ -2288,7 +2288,7 @@ function copySummaryForUser() {
         }
 
         // ★GASのWebアプリURL（必ず /exec を使う）
-        const WEBAPP_URL = 'https://script.google.com/macros/s/AKfycby9e7EEi86jqvZgOngVQuyVXWEM5fr4asvdzQUBOWUhaUjUZwCOH02DnzO4chRY35bA/exec';
+        const WEBAPP_URL = 'https://script.google.com/macros/s/AKfycbz1HVkhbX9RGd5VavtZ-XeUDpitWlGUJ1Q10_ELUBA8pNYlQvHkwbVTb-P8r6VzMrYi/exec';
 
         /* ▼▼ 追加：サーバと同じ合言葉（簡易署名の鍵） ▼▼
            ※公開ページに置くと閲覧者も読めます。実運用では中継サーバ等で秘匿がベター。 */
@@ -2441,7 +2441,7 @@ async function submitForm() {
     unlockAll();
     SUBMITTING = false;
     if (err && err.message && err.message !== 'val') {
-      alert('ご予約が埋まっていたためご予約できませんでした。別のお日にちを変更ください。');
+      alert('ご予約が埋まっているか、すでにご予約されております。');
     }
   }
 }
