--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <button type="button" onclick="selectSingle('eyeBrowMenuGroup', this)">まつげパーマ</button>
       <button type="button" onclick="selectSingle('eyeBrowMenuGroup', this)">美眉スタイリング</button>
       <button type="button" onclick="selectSingle('eyeBrowMenuGroup', this)">顔タイプ診断×マツパ&眉Wax</button>
-      <button type="button" onclick="selectSingle('eyeBrowMenuGroup', this)">W診断(顔タイプ,4タイプカラー) × マツパ&眉Wax＆メイク</button>
+      <button type="button" onclick="selectSingle('eyeBrowMenuGroup', this)">W診断(顔タイプ,4タイプカラー) <br>×<br> マツパ&眉Wax＆メイク</button>
     </div>
 
     <!-- ⑤ まつ毛 オフ -->
